--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
+//        maven {
+//////            url 'https://oss.sonatype.org/content/groups/public'
+//            url 'https://oss.sonatype.org/content/groups/staging'
+//        }
     }
 }
